# web

./: .gitignore  README.md  hw4.md  main.py  pyproject.toml  requirements.txt
app/: closet_server.py  collage.py  collage_test.py  conftest.py  db.py  db_test.py  helper.py  integration_test.py  log.py  log_server.py  main.py  main_test.py
app/grpc_logger/definitions/: service.proto
app/grpc_logger/definitions/builds/: service_pb2.py  service_pb2_grpc.py
app/routers/: __init__.py  closet.py  favicon.py  randomize.py  root.py  show.py
app/test/: closet_server_test.py  collage_test.py  db_test.py  integration_test.py  log_server_test.py  main_test.py
endpoints/: closet.py  randomize.py  root.py  show.py
