[tool.poetry]
name = "BaseApp"
version = "0.0.1"
description = "Base FastAPI app"
authors = ["Lisa Vasilenko <vasilliza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
opencv-python = "^4.6.0.66"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"